# recruitment_less

environments/app/: Dockerfile  skaffold.yaml
environments/app/charts/: Chart.yaml  values.yaml
environments/app/charts/templates/: deployment.yaml  service.yaml
environments/db/: Dockerfile  skaffold.yaml
environments/db/charts/: Chart.yaml  values.yaml
environments/db/charts/templates/: deployment.yaml  service.yaml
environments/db/data/: 00_init.sql  01_table.sql
recruitment_api/: Cargo.toml
recruitment_api/domain/: Cargo.toml
recruitment_api/domain/src/: candidate.rs  lib.rs  selection_status.rs
recruitment_api/gateway/: Cargo.toml
recruitment_api/gateway/src/: candidate_gateway.rs  lib.rs
recruitment_api/src/: main.rs  routers.rs
recruitment_api/src/domain/: candidate.rs  interview.rs  mod.rs
recruitment_api/usecase/: Cargo.toml
recruitment_api/usecase/src/: get_candidate.rs  lib.rs
