[package]
name = "recruitment_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.3"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
chrono = "0.4"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
mockall = "0.11.1"
mockall_double = "0.3.0"
domain = { path = "./domain" }

[workspace]

members = [
    "usecase",
    "domain",
    "gateway"
]